--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -73,5 +73,5 @@
         <h1>You scored : {{mark}} </h1>
     </div>
     <br>
-    <div class="note">Developed By Sumant Dhere<br>Designed By Somshekhar Bharai</div>
+    <div class="note">Developed By Sumant Dhere</div>
 </body>
